logs/checkerpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/checkerpy'...
Listing './lib/python3.5/site-packages/checkerpy/decorators'...
Compiling './lib/python3.5/site-packages/checkerpy/decorators/bounded.py'...
***   File "./lib/python3.5/site-packages/checkerpy/decorators/bounded.py", line 123
    message = (f'Type of limits on argument {arg_id} must be tuple,'
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/decorators/typed.py'...
***   File "./lib/python3.5/site-packages/checkerpy/decorators/typed.py", line 112
    return (f'An argument of {func_type} {func_name}'
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy/functional'...
Compiling './lib/python3.5/site-packages/checkerpy/functional/composition.py'...
***   File "./lib/python3.5/site-packages/checkerpy/functional/composition.py", line 106
    return (f'{name} must be a callable that accepts (i) '
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy/types'...
Listing './lib/python3.5/site-packages/checkerpy/types/all'...
Compiling './lib/python3.5/site-packages/checkerpy/types/all/all.py'...
***   File "./lib/python3.5/site-packages/checkerpy/types/all/all.py", line 79
    return (f'Variable{self.__string} with type {type_name} does '
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy/types/numpy'...
Compiling './lib/python3.5/site-packages/checkerpy/types/numpy/justdtype.py'...
***   File "./lib/python3.5/site-packages/checkerpy/types/numpy/justdtype.py", line 72
    return (f'Variable {value_name} of type '
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy/types/one'...
Compiling './lib/python3.5/site-packages/checkerpy/types/one/just.py'...
***   File "./lib/python3.5/site-packages/checkerpy/types/one/just.py", line 64
    of_type = types[0] if len(types) == 1 else f'one of {types}'
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy/validators'...
Listing './lib/python3.5/site-packages/checkerpy/validators/all'...
Compiling './lib/python3.5/site-packages/checkerpy/validators/all/alllen.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/all/alllen.py", line 78
    return (f'Variable {cls.__string} with type {type_name} does not'
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/validators/all/alllimited.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/all/alllimited.py", line 88
    return (f'Variable{cls.__string} with type {type_name} does not'
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/validators/all/allnonempty.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/all/allnonempty.py", line 70
    return (f'Variable {cls.__string} with type {type_name} does not'
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy/validators/numpy'...
Compiling './lib/python3.5/site-packages/checkerpy/validators/numpy/justndim.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/numpy/justndim.py", line 88
    return (f'Could not convert given ndim {value} of'
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/validators/numpy/justshape.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/numpy/justshape.py", line 134
    f' tuples of integers, not a {type_of_value} like {value}!')
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy/validators/one'...
Compiling './lib/python3.5/site-packages/checkerpy/validators/one/call.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/one/call.py", line 56
    return f'Object {name} of type {type_name} is not callable!'
                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/validators/one/justlen.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/one/justlen.py", line 86
    return (f'Could not convert given length {value} of'
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/validators/one/limited.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/one/limited.py", line 89
    return (f'Cannot compare type {value_type}{value_name}'
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/validators/one/nonempty.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/one/nonempty.py", line 63
    return f'Emptiness of {var_name}type {type_name} cannot be determined!'
                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/checkerpy/validators/one/oneof.py'...
***   File "./lib/python3.5/site-packages/checkerpy/validators/one/oneof.py", line 75
    one_of_items = f'one of {cls._items}'
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/checkerpy-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
